--- a/hdfs_quiz_template.yml
+++ b/hdfs_quiz_template.yml
@@ -1,56 +1,48 @@
 beginner.how_many_items_in_hdfs:
-    stdin: "provide your answer here"
+    stdin: "9"
 intermediate.hdfs_list_recursively:
-    stdin: "provide your answer here"
+    stdin: "hdfs dfs -ls /data/wiki"
 intermediate.hdfs_list_recursively_human_readable:
-    stdin: "provide your answer here"
+    stdin: "hdfs dfs -count /data/wiki/human_readable.txt"
 intermediate.hdfs_file_replication_factor:
-    stdin: "provide your answer here"
+    stdin: "3"
 intermediate.hdfs_folder_replication_factor:
-    stdin: "provide your answer here"
+    stdin: "1"
 intermediate.hdfs_describe_size:
-    stdin: "provide your answer here"
+    stdin: "actual"
 intermediate.hdfs_cumulative_size:
-    stdin: "provide your answer here"
+    stdin: "dfs -du -s -h /data/wiki"
 intermediate.hdfs_create_folder:
-    stdin: "provide your answer here"
+    stdin: "hdfs dfs -mkdir /user/bdb2c2022q2_ageeva/ageeva"
 intermediate.hdfs_create_nested_folder:
-    stdin: "provide your answer here"
+    stdin: "hdfs dfs -mkdir -p  /user/bdb2c2022q2_ageeva/name/io/dom"
 intermediate.hdfs_remove_nested_folders:
-    stdin: "provide your answer here"
+    stdin: "hdfs dfs -rm -r /user/bdb2c2022q2_ageeva/name"
 intermediate.hdfs_trash_behavior:
-    stdin: "provide your answer here"
+    stdin: "Trash - это корзина
+hdfs dfs -rm -skipTrash /user/bdb2c2022q2_ageeva/ageeva.txt"
 intermediate.hdfs_create_empty_file:
-    stdin: "provide your answer here"
+    stdin: "hdfs dfs -touchz /user/bdb2c2022q2_ageeva/file"
 intermediate.hdfs_create_small_file:
-    stdin: |-
-        provide your
-        multiline answer
-        here
+    stdin: |hdfs dfs -copyFromLocal Names.txt /user/bdb2c2022q2_ageeva/Names.txt
 intermediate.hdfs_output_file:
-    stdin: "provide your answer here"
+    stdin: "hdfs dfs -cat /user/bdb2c2022q2_ageeva/Names.txt"
 intermediate.hdfs_output_file_end:
-    stdin: "provide your answer here"
+    stdin: "hdfs dfs -tail /user/bdb2c2022q2_ageeva/Names.txt"
 intermediate.hdfs_output_file_start:
-    stdin: "provide your answer here"
+    stdin: "hdfs dfs -cat /user/bdb2c2022q2_ageeva/Names.txt | head -n 3"
 intermediate.hdfs_tail_vs_unix_tail:
     stdin: "provide your answer here"
 intermediate.hdfs_copy_file:
-    stdin: "provide your answer here"
+    stdin: "hdfs dfs -cp /user/bdb2c2022q2_ageeva/Names.txt /user/bdb2c2022q2_ageeva/name"
 intermediate.hdfs_move_file:
-    stdin: |-
-        provide your
-        multiline answer
-        here
+    stdin: "hdfs dfs -mv /user/bdb2c2022q2_ageeva/Names.txt /user/bdb2c2022q2_ageeva/name"
 intermediate.hdfs_download_and_concatenate:
-    stdin: "provide your answer here"
+    stdin: "hdfs dfs -getmerge -nl /src/file1.txt /src/file2.txt /output.txt"
 advanced.hdfs_set_file_replication:
-    stdin: |-
-        provide your
-        multiline answer
-        here
+    stdin: "hdfs dfs -setrep -w 3 -R /user/oozie/share/lib"
 advanced.hdfs_get_files_and_block:
-    stdin: "provide your answer here"
+    stdin: "hdfs fsck / -files -blocks -locations"
 advanced.hdfs_get_block_information:
     stdin: "provide your answer here"
 advanced.hdfs_dfs_architecture:
